# ML_EAN_Proyecto3

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
Cuadernos/: Evaluacion datos sobre obesidad.ipynb
