[tool.poetry]
name = "proyecto3"
version = "0.1.0"
description = "Proyecto para aplicar una exploración profunda a la base de nivel de obesidad"
authors = ["j-torresc <jason22787@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
